--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,12 @@
     android:id="@+id/main_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:rightPadding="50dp"
-    >
+    app:rightPadding="50dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <include
             android:id="@+id/view_menu"
@@ -22,9 +20,10 @@
 
         <include
             android:id="@+id/view_content"
+            layout="@layout/main_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            layout="@layout/main_content"/>
+            android:layout_height="match_parent"/>
+
     </LinearLayout>
 
 </com.kk.qq_ui.ui.SlidingMenu>
